kubernetes/apps/storage/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  hostnames:
    - "longhorn.${DOMAIN_APP}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-app
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Robots-Tag
                value: "noindex, nofollow, nosnippet, noarchive"
